# PTPMNM_RAG

./: .env.example  .gitignore  Dockerfile  Flow.md  README.md  RERANK_IMPLEMENTATION_PLAN.md  SETUP.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_simplified.txt  ruff.toml  sample.docx  sample2.docx
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
data/: sample3.docx
db/migrations/: 001_init.sql
db/seeds/: 001_seed.sql
docs/api/: chatbox-local-api.md
docs/roadmap/: future-feature-groups.md
docs/runbook/: local-first-chatbox.md
documentation/: README.md  project_report.tex
specs/001-local-rag-chatbox/: input-parsing-chunking.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-local-rag-chatbox/checklists/: requirements.md
src/: __init__.py  database.py  models.py
src/chatbox/: __init__.py
src/chunking/: text_chunker.py
src/history/: router.py
src/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/rag/: embedding.py  llm.py  pipeline.py  rerank.py  retriever.py  vectorstore.py
tests/benchmark/: test_full_response_latency.py  test_hybrid_retrieval_latency.py  test_parse_chunk_latency.py  test_pipeline_sla_report.py  test_rag_retrieval_latency.py
tests/contract/: test_graph_store_port.py  test_llm_provider_port.py  test_vector_store_port.py
tests/integration/: test_foundation_bootstrap.py  test_full_pipeline_e2e.py  test_ingest_parse_chunk_pipeline.py  test_parallel_retrieval_fusion.py  test_rag_retrieval_context.py  test_response_streaming_fallback.py
(+51 files in other folders)
